<resources>
    <string name="app_name">PepperSquareTestApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="create">Create</string>
    <string name="home">Home</string>
    <string name="most_popular">Most Popular</string>
    <string name="detail">Detail</string>

    <!--Create-->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category_tags">Category/Tags</string>
    <string name="author">Author</string>
    <string name="image_url">Image URL Only</string>
    <string name="publish">PUBLISH</string>


    <!--Content Description-->
    <string name="news_image">Contains the image of the news</string>

    <!-- Sample Texts-->
    <string name="sample_news_title">Quick Brown Fox Jumps Over</string>
    <string name="sample_category">TRAVELLING</string>
    <string name="sample_date">30 OCT 2017</string>
    <string name="sample_description">idwiiq dsoino owi qowi oqiwq owicnoq iw cqol</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_articles_found">No Articles Found</string>
</resources>
